--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,132 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
   </head>
-  <body>
+  <body class="page__body">
+    <header class="page-header">
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="https://via.placeholder.com/33.32x37.61" width="33.32" height="37.61" alt="Логотип (символ) Кэт энерджи">
+        <img class="page-header__logo-text" src="https://via.placeholder.com/101x18" width="101" height="18" alt="Логотип (текст) Кэт энерджи">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
+        <ul class="main-nav__list">
+          <li class="main-nav__item main-nav__item--active">
+            <a>Главная</a>
+          </li>
+          <li class="main-nav__item">
+            <a href="catalog.html">Каталог продукции</a>
+          </li>
+          <li class="main-nav__item">
+            <a href="form.html">Подбор программы</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main class="page-main">
+      <h1>Функциональное питание для котов</h1>
+      <section class="promo">
+        <div class="promo__wrapper">
+          <h2 class="visually-hidden">Промо-блок Кэт Энерджи</h2>
+          <p class="promo__slogan">Занялся собой? Займись котом!</p>
+          <img class="promo__image" src="https://via.placeholder.com/280x270" width="280" height="270" alt="Фирменное начертание Кэт энерджи">
+          <a class="promo__button" href="form.html">Подобрать программу</a>
+        </div>
+      </section>
+      <section class="goals">
+        <h2 class="visually-hidden">Цели, которых можно достичь с Кэт Энерджи</h2>
+        <div class="goals__wrapper">
+          <ul class="goals__list">
+            <li class="goals__item goals__item--slim">
+              <h3 class="goals__title">Похудение</h3>
+              <p class="goals__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+              <a class="goals__button" href="catalog.html">Каталог Slim</a>
+            </li>
+            <li class="goals__item goals__item--pro">
+              <h3 class="goals__title">Набор массы</h3>
+              <p class="goals__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+              <a class="goals__button" href="catalog.html">Каталог Pro</a>
+            </li>
+          </ul>
+        </div>
+      </section>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
+      <section class="how-it-works">
+        <div class="how-it-works__wrapper">
+          <h2 class="how-it-works__title">Как это работает</h2>
+          <ul class="how-it-works__list">
+            <li class="how-it-works__item">Функциональное питание содержит только полезные питательные вещества.</li>
+            <li class="how-it-works__item">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
+            <li class="how-it-works__item">Замените один-два приема обычной еды на наше функциональное питание.</li>
+            <li class="how-it-works__item">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+          </ul>
+        </div>
+      </section>
 
+      <section class="case">
+        <div class="case__wrapper">
+          <h2 class="case__title">Живой пример</h2>
+          <p>Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+          <dl class="case__list">
+            <div class="case__item">
+              <dt class="case__number">5 кг</dt>
+              <dd class="case__description">снижение веса</dd>
+            </div>
+            <div class="case__item">
+              <dt class="case__number">60 дней</dt>
+              <dd class="case__description">затрачено времени</dd>
+            </div>
+          </dl>
+          <p class="case__sum">Затраты на питание: 15 000 руб.</p>
+          <div class="case__slider">
+            <img class="case__image-before" src="https://via.placeholder.com/311x232" width="311" height="232">
+            <img class="case__image-after" src="https://via.placeholder.com/251x240" width="251" height="240">
+            <p class="case__slider-toggles">
+              <button class="case__slider-toggle" type="button">Было</button>
+              <button class="case__slider-toggle" type="button">Стало</button>
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="page-footer">
+      <div class="page-footer__wrapper">
+        <div class="page-footer__contacts contacts">
+          <p class="contacts__invitation">Приглашаем к сотрудничеству дилеров!</p>
+          <p class="contacts__address">ул. Большая Конюшенная, д. 19/8</p>
+          <p class="contacts__city">Санкт-Петербург</p>
+          <img class="contacts__map" src="https://via.placeholder.com/320x362" width="320" height="362" alt="Карта расположения Кэт Энерджи">
+        </div>
+        <div class="page-footer__logo">
+          <a class="page-footer__logo-link" href="index.html">
+            <img src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип (текст) Кэт энерджи">
+          </a>
+        </div>
+        <div class="page-footer__social social">
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+            </li>
+          </ul>
+        </div>
+        <div class="page-footer__copyright copyright">
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+            <p>HTML Academy</p>
+            <img class="copyright__logo" src="https://via.placeholder.com/27x34" width="27" height="34" alt="Логотип HTML Academy">
+          </a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
