Исправляет опечатку (wtapper)

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -33,7 +33,7 @@
 
       <section class="basic-goods">
         <h2 class="visually-hidden">Основные продукты Кэт Энерджи</h2>
-        <div class="basic-goods__wtapper">
+        <div class="basic-goods__wrapper">
           <ul class="basic-goods__list">
             <li class="basic-goods__item">
               <h3 class="basic-goods__title">Cat Energy PRO 500 г</h3>
