--- a/source/form.html
+++ b/source/form.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Кэт энерджи: Подбор программы</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
     <header class="page-header">
-      <a class="page-header__logo">
+      <a href="index.html" class="page-header__logo">
         <img class="page-header__logo-image" src="https://via.placeholder.com/33.32x37.61" width="33.32" height="37.61" alt="Логотип (символ) Кэт энерджи">
         <img class="page-header__logo-text" src="https://via.placeholder.com/101x18" width="101" height="18" alt="Логотип (текст) Кэт энерджи">
       </a>
@@ -16,61 +17,84 @@
         </button>
         <ul class="main-nav__list">
           <li class="main-nav__item main-nav__item--active">
-            <a>Главная</a>
+            <a href="index.html">Главная</a>
           </li>
           <li class="main-nav__item">
             <a href="catalog.html">Каталог продукции</a>
           </li>
           <li class="main-nav__item">
-            <a href="form.html">Подбор программы</a>
+            <a>Подбор программы</a>
           </li>
         </ul>
       </nav>
     </header>
 
-    <main class="page__main">
-      <h1 class="page__title">Подбор программы</h1>
+    <main class="page-form">
+      <h1 class="page-form__title">Подбор программы</h1>
       <section class="application">
+        <h2 class="visually-hidden">Форма заявки на подбор программы</h2>
         <p class="application__intro">Заполните анкету, и мы подберем программу питания для вашего кота</p>
         <form class="application__form" action="https://echo.htmlacademy.ru" method="post">
           <fieldset class="application__fieldset">
-            <label class="application__item application__item--required">
-              Имя:*
-              <input type="text" name="cat-name" placeholder="Барсик">
-            </label>
-            <label class="application__item application__item--required">
-              Вес (кг):*
-              <input type="number" name="cat-weight" placeholder="7">
-            </label>
-            <label class="application__item">
-              Возраст (лет):
-              <input type="number" name="cat-age" placeholder="7">
-            </label>
+            <ul class="application__list">
+              <li class="application__item">
+                <label class="application__label application__label--required">
+                  Имя:*
+                  <input type="text" name="cat-name" placeholder="Барсик">
+                </label>
+              </li>
+              <li class="application__item">
+                <label class="application__label application__label--required">
+                  Вес (кг):*
+                  <input type="number" name="cat-weight" placeholder="7">
+                </label>
+              </li>
+              <li class="application__item">
+                <label class="application__label">
+                  Возраст (лет):
+                  <input type="number" name="cat-age" placeholder="7">
+                </label>
+              </li>
+            </ul>
           </fieldset>
-          <fieldset class="application__fieldset client-goal">
-            <label class="application__item">
-              Похудение
-              <input class="visually-hidden client-goal__radio" type="radio" name="client-goal" value="slim" checked>
-            </label>
-            <label class="application__item">
-              Набор массы
-              <input class="visually-hidden client-goal__radio" type="radio" name="client-goal" value="weight-gain">
-            </label>
-            <label class="application__item">
-              Не знаю (Нужен ваш совет)
-              <input class="visually-hidden client-goal__radio" type="radio" name="client-goal" value="need-advice">
-            </label>
+          <fieldset class="application__fieldset radio">
+            <ul class="application__list">
+              <li class="application__item">
+                <label class="application__label radio__label">
+                  Похудение
+                  <input class="visually-hidden radio__input" type="radio" name="client-goal" value="slim" checked>
+                </label>
+              </li>
+              <li class="application__item">
+                <label class="application__label radio__label">
+                  Набор массы
+                  <input class="visually-hidden radio__input" type="radio" name="client-goal" value="weight-gain">
+                </label>
+              </li>
+              <li class="application__item">
+                <label class="application__label radio__label">
+                  Не знаю (Нужен ваш совет)
+                  <input class="visually-hidden radio__input" type="radio" name="client-goal" value="need-advice">
+                </label>
+              </li>
+            </ul>
           </fieldset>
           <fieldset class="application__fieldset">
             <legend class="application__fieldset-title">Контактные данные (владельца кота)</legend>
-            <label class="application__item application__item--required">
-              E-mail:*
-              <input type="email" name="client-email" placeholder="kuklachev@gmail.com">
-            </label>
-            <label class="application__item application__item--required">
-              Телефон:*
-              <input type="tel" name="client-phone" placeholder="8 (960) 900-60-90">
-            </label>
+            <ul class="application__list">
+              <li class="application__item">
+                <label class="application__label application__label--required">
+                  E-mail:*
+                  <input type="email" name="client-email" placeholder="kuklachev@gmail.com">
+                </label>
+              </li>
+              <li class="application__item">
+                <label class="application__label application__label--required">
+                  Телефон:*
+                  <input type="tel" name="client-phone" placeholder="8 (960) 900-60-90">
+                </label>
+              </li>
+            </ul>
           </fieldset>
           <fieldset class="application__fieldset">
             <legend class="application__fieldset-title">Комментарий</legend>
@@ -80,25 +104,25 @@
             <legend class="application__fieldset-title">Дополнительно</legend>
             <ul class="additions__list">
               <li class="additions__item">
-                <label  class="application__item">
+                <label  class="application__label">
                   Сахарозаменитель
                   <input type="checkbox" name="sugar-substitute" checked>
                 </label>
               </li>
               <li class="additions__item">
-                <label  class="application__item">
+                <label  class="application__label">
                   Питьевая вода
                   <input type="checkbox" name="water">
                 </label>
               </li>
               <li class="additions__item">
-                <label  class="application__item">
+                <label  class="application__label">
                   Молоко
                   <input type="checkbox" name="milk">
                 </label>
               </li>
               <li class="additions__item">
-                <label  class="application__item">
+                <label  class="application__label">
                   Витамины
                   <input type="checkbox" name="vitamins">
                 </label>
