Стилизация страницы каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Каталог Кэт энерджи</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
     <header class="page-header">
@@ -35,144 +36,144 @@
         <h2 class="visually-hidden">Основные продукты Кэт Энерджи</h2>
         <div class="basic-goods__wrapper">
           <ul class="basic-goods__list">
-            <li class="basic-goods__item">
-              <h3 class="basic-goods__title">Cat Energy PRO 500 г</h3>
-              <img class="basic-goods__image" src="https://via.placeholder.com/140x112" width="140" height="112" alt="Cat Energy PRO 500 г">
-              <dl class="basic-goods__parameters-list">
-                <div class="basic-goods__parameters-item">
-                  <dt class="basic-goods__parameter">Масса</dt>
-                  <dd class="basic-goods__parameter-value">500 г</dd>
+            <li class="basic-goods__item product-card">
+              <h3 class="product-card__title">Cat Energy PRO 500 г</h3>
+              <img class="product-card__image" src="https://via.placeholder.com/140x112" width="140" height="112" alt="Cat Energy PRO 500 г">
+              <dl class="product-card__parameters-list">
+                <div class="product-card__parameters-item">
+                  <dt class="product-card__parameter">Масса</dt>
+                  <dd class="product-card__parameter-value">500 г</dd>
                 </div>
-                <div class="basic-goods__parameters-item">
-                  <dt class="basic-goods__parameter">Вкус</dt>
-                  <dd class="basic-goods__parameter-value">Курица</dd>
+                <div class="product-card__parameters-item">
+                  <dt class="product-card__parameter">Вкус</dt>
+                  <dd class="product-card__parameter-value">Курица</dd>
                 </div>
-                <div class="basic-goods__parameters-item">
-                  <dt class="basic-goods__parameter">Масса</dt>
-                  <dd class="basic-goods__parameter-value">700 Р.</dd>
+                <div class="product-card__parameters-item">
+                  <dt class="product-card__parameter">Масса</dt>
+                  <dd class="product-card__parameter-value">700 Р.</dd>
                 </div>
               </dl>
-              <a class="basic-goods__button button" href="#">Заказать</a>
+              <a class="product-card__button button" href="#">Заказать</a>
             </li>
-            <li class="basic-goods__item">
-              <h3 class="basic-goods__title">Cat Energy PRO 1000 г</h3>
-              <img class="basic-goods__image" src="https://via.placeholder.com/140x112" width="140" height="112" alt="Cat Energy PRO 500 г">
-              <dl class="basic-goods__parameters-list">
-                <div class="basic-goods__parameters-item">
-                  <dt class="basic-goods__parameter">Масса</dt>
-                  <dd class="basic-goods__parameter-value">1000 г</dd>
+            <li class="basic-goods__item product-card">
+              <h3 class="product-card__title">Cat Energy PRO 1000 г</h3>
+              <img class="product-card__image" src="https://via.placeholder.com/140x112" width="140" height="112" alt="Cat Energy PRO 500 г">
+              <dl class="product-card__parameters-list">
+                <div class="product-card__parameters-item">
+                  <dt class="product-card__parameter">Масса</dt>
+                  <dd class="product-card__parameter-value">1000 г</dd>
                 </div>
-                <div class="basic-goods__parameters-item">
-                  <dt class="basic-goods__parameter">Вкус</dt>
-                  <dd class="basic-goods__parameter-value">Курица</dd>
+                <div class="product-card__parameters-item">
+                  <dt class="product-card__parameter">Вкус</dt>
+                  <dd class="product-card__parameter-value">Курица</dd>
                 </div>
-                <div class="basic-goods__parameters-item">
-                  <dt class="basic-goods__parameter">Масса</dt>
-                  <dd class="basic-goods__parameter-value">1000 Р.</dd>
+                <div class="product-card__parameters-item">
+                  <dt class="product-card__parameter">Масса</dt>
+                  <dd class="product-card__parameter-value">1000 Р.</dd>
                 </div>
               </dl>
-              <a class="basic-goods__button button" href="#">Заказать</a>
+              <a class="product-card__button button" href="#">Заказать</a>
             </li>
-            <li class="basic-goods__item">
-              <h3 class="basic-goods__title">Cat Energy PRO 500 г</h3>
-              <img class="basic-goods__image" src="https://via.placeholder.com/140x112" width="140" height="112" alt="Cat Energy PRO 500 г">
-              <dl class="basic-goods__parameters-list">
-                <div class="basic-goods__parameters-item">
-                  <dt class="basic-goods__parameter">Масса</dt>
-                  <dd class="basic-goods__parameter-value">500 г</dd>
+            <li class="basic-goods__item product-card">
+              <h3 class="product-card__title">Cat Energy PRO 500 г</h3>
+              <img class="product-card__image" src="https://via.placeholder.com/140x112" width="140" height="112" alt="Cat Energy PRO 500 г">
+              <dl class="product-card__parameters-list">
+                <div class="product-card__parameters-item">
+                  <dt class="product-card__parameter">Масса</dt>
+                  <dd class="product-card__parameter-value">500 г</dd>
                 </div>
-                <div class="basic-goods__parameters-item">
-                  <dt class="basic-goods__parameter">Вкус</dt>
-                  <dd class="basic-goods__parameter-value">Рыба</dd>
+                <div class="product-card__parameters-item">
+                  <dt class="product-card__parameter">Вкус</dt>
+                  <dd class="product-card__parameter-value">Рыба</dd>
                 </div>
-                <div class="basic-goods__parameters-item">
-                  <dt class="basic-goods__parameter">Масса</dt>
-                  <dd class="basic-goods__parameter-value">700 Р.</dd>
+                <div class="product-card__parameters-item">
+                  <dt class="product-card__parameter">Масса</dt>
+                  <dd class="product-card__parameter-value">700 Р.</dd>
                 </div>
               </dl>
-              <a class="basic-goods__button button" href="#">Заказать</a>
+              <a class="product-card__button button" href="#">Заказать</a>
             </li>
-            <li class="basic-goods__item">
-              <h3 class="basic-goods__title">Cat Energy PRO 1000 г</h3>
-              <img class="basic-goods__image" src="https://via.placeholder.com/140x112" width="140" height="112" alt="Cat Energy PRO 500 г">
-              <dl class="basic-goods__parameters-list">
-                <div class="basic-goods__parameters-item">
-                  <dt class="basic-goods__parameter">Масса</dt>
-                  <dd class="basic-goods__parameter-value">1000 г</dd>
+            <li class="basic-goods__item product-card">
+              <h3 class="product-card__title">Cat Energy PRO 1000 г</h3>
+              <img class="product-card__image" src="https://via.placeholder.com/140x112" width="140" height="112" alt="Cat Energy PRO 500 г">
+              <dl class="product-card__parameters-list">
+                <div class="product-card__parameters-item">
+                  <dt class="product-card__parameter">Масса</dt>
+                  <dd class="product-card__parameter-value">1000 г</dd>
                 </div>
-                <div class="basic-goods__parameters-item">
-                  <dt class="basic-goods__parameter">Вкус</dt>
-                  <dd class="basic-goods__parameter-value">Рыба</dd>
+                <div class="product-card__parameters-item">
+                  <dt class="product-card__parameter">Вкус</dt>
+                  <dd class="product-card__parameter-value">Рыба</dd>
                 </div>
-                <div class="basic-goods__parameters-item">
-                  <dt class="basic-goods__parameter">Масса</dt>
-                  <dd class="basic-goods__parameter-value">1000 Р.</dd>
+                <div class="product-card__parameters-item">
+                  <dt class="product-card__parameter">Масса</dt>
+                  <dd class="product-card__parameter-value">1000 Р.</dd>
                 </div>
               </dl>
-              <a class="basic-goods__button button" href="#">Заказать</a>
+              <a class="product-card__button button" href="#">Заказать</a>
             </li>
-            <li class="basic-goods__item">
-              <h3 class="basic-goods__title">Cat Energy Slim 500 г</h3>
-              <img class="basic-goods__image" src="https://via.placeholder.com/140x112" width="140" height="112" alt="Cat Energy PRO 500 г">
-              <dl class="basic-goods__parameters-list">
-                <div class="basic-goods__parameters-item">
-                  <dt class="basic-goods__parameter">Масса</dt>
-                  <dd class="basic-goods__parameter-value">500 г</dd>
+            <li class="basic-goods__item product-card">
+              <h3 class="product-card__title">Cat Energy Slim 500 г</h3>
+              <img class="product-card__image" src="https://via.placeholder.com/140x112" width="140" height="112" alt="Cat Energy PRO 500 г">
+              <dl class="product-card__parameters-list">
+                <div class="product-card__parameters-item">
+                  <dt class="product-card__parameter">Масса</dt>
+                  <dd class="product-card__parameter-value">500 г</dd>
                 </div>
-                <div class="basic-goods__parameters-item">
-                  <dt class="basic-goods__parameter">Вкус</dt>
-                  <dd class="basic-goods__parameter-value">Гречка</dd>
+                <div class="product-card__parameters-item">
+                  <dt class="product-card__parameter">Вкус</dt>
+                  <dd class="product-card__parameter-value">Гречка</dd>
                 </div>
-                <div class="basic-goods__parameters-item">
-                  <dt class="basic-goods__parameter">Масса</dt>
-                  <dd class="basic-goods__parameter-value">400 Р.</dd>
+                <div class="product-card__parameters-item">
+                  <dt class="product-card__parameter">Масса</dt>
+                  <dd class="product-card__parameter-value">400 Р.</dd>
                 </div>
               </dl>
-              <a class="basic-goods__button button" href="#">Заказать</a>
+              <a class="product-card__button button" href="#">Заказать</a>
             </li>
-            <li class="basic-goods__item">
-              <h3 class="basic-goods__title">Cat Energy Slim 500 г</h3>
-              <img class="basic-goods__image" src="https://via.placeholder.com/140x112" width="140" height="112" alt="Cat Energy PRO 500 г">
-              <dl class="basic-goods__parameters-list">
-                <div class="basic-goods__parameters-item">
-                  <dt class="basic-goods__parameter">Масса</dt>
-                  <dd class="basic-goods__parameter-value">1000 г</dd>
+            <li class="basic-goods__item product-card">
+              <h3 class="product-card__title">Cat Energy Slim 500 г</h3>
+              <img class="product-card__image" src="https://via.placeholder.com/140x112" width="140" height="112" alt="Cat Energy PRO 500 г">
+              <dl class="product-card__parameters-list">
+                <div class="product-card__parameters-item">
+                  <dt class="product-card__parameter">Масса</dt>
+                  <dd class="product-card__parameter-value">1000 г</dd>
                 </div>
-                <div class="basic-goods__parameters-item">
-                  <dt class="basic-goods__parameter">Вкус</dt>
-                  <dd class="basic-goods__parameter-value">Гречка</dd>
+                <div class="product-card__parameters-item">
+                  <dt class="product-card__parameter">Вкус</dt>
+                  <dd class="product-card__parameter-value">Гречка</dd>
                 </div>
-                <div class="basic-goods__parameters-item">
-                  <dt class="basic-goods__parameter">Масса</dt>
-                  <dd class="basic-goods__parameter-value">700 Р.</dd>
+                <div class="product-card__parameters-item">
+                  <dt class="product-card__parameter">Масса</dt>
+                  <dd class="product-card__parameter-value">700 Р.</dd>
                 </div>
               </dl>
-              <a class="basic-goods__button button" href="#">Заказать</a>
+              <a class="product-card__button button" href="#">Заказать</a>
             </li>
-            <li class="basic-goods__item">
-              <h3 class="basic-goods__title">Cat Energy Slim 500 г</h3>
-              <img class="basic-goods__image" src="https://via.placeholder.com/140x112" width="140" height="112" alt="Cat Energy PRO 500 г">
-              <dl class="basic-goods__parameters-list">
-                <div class="basic-goods__parameters-item">
-                  <dt class="basic-goods__parameter">Масса</dt>
-                  <dd class="basic-goods__parameter-value">500 г</dd>
+            <li class="basic-goods__item product-card">
+              <h3 class="product-card__title">Cat Energy Slim 500 г</h3>
+              <img class="product-card__image" src="https://via.placeholder.com/140x112" width="140" height="112" alt="Cat Energy PRO 500 г">
+              <dl class="product-card__parameters-list">
+                <div class="product-card__parameters-item">
+                  <dt class="product-card__parameter">Масса</dt>
+                  <dd class="product-card__parameter-value">500 г</dd>
                 </div>
-                <div class="basic-goods__parameters-item">
-                  <dt class="basic-goods__parameter">Вкус</dt>
-                  <dd class="basic-goods__parameter-value">Рис</dd>
+                <div class="product-card__parameters-item">
+                  <dt class="product-card__parameter">Вкус</dt>
+                  <dd class="product-card__parameter-value">Рис</dd>
                 </div>
-                <div class="basic-goods__parameters-item">
-                  <dt class="basic-goods__parameter">Масса</dt>
-                  <dd class="basic-goods__parameter-value">500 Р.</dd>
+                <div class="product-card__parameters-item">
+                  <dt class="product-card__parameter">Масса</dt>
+                  <dd class="product-card__parameter-value">500 Р.</dd>
                 </div>
               </dl>
-              <a class="basic-goods__button button" href="#">Заказать</a>
+              <a class="product-card__button button" href="#">Заказать</a>
             </li>
           </ul>
           <div class="basic-goods__more-goods">
-            <h3 class="basic-goods__title">Показать еще 100500 товаров</h3>
+            <h3 class="basic-goods__more-goods-title">Показать еще 100500 товаров</h3>
             <p>На самом деле вкусов гораздо больше!</p>
-            <a class="basic-goods__button button basic-goods__button--show-all" href="#">Показать все</a>
+            <a class="basic-goods__button button" href="#">Показать все</a>
           </div>
         </div>
       </section>
@@ -182,27 +183,27 @@
           <h2 class="additional-goods__title">Дополнительные товары</h2>
           <ul class="additional-goods__list">
             <li class="additional-goods__item">
-              <h3 class="additional-goods__title">Сахарозаменитель</h3>
-              <p class="additional-goods__parameter">1 упаковка (100 г)</p>
-              <p class="additional-goods__parameter">200 Р.</p>
+              <h3 class="additional-good__title">Сахарозаменитель</h3>
+              <p class="additional-good__parameter">1 упаковка (100 г)</p>
+              <p class="additional-good__parameter">200 Р.</p>
               <a class="additional-goods__button button" href="#">Заказать</a>
             </li>
             <li class="additional-goods__item">
-              <h3 class="additional-goods__title">Питьевая вода</h3>
-              <p class="additional-goods__parameter">5 литров</p>
-              <p class="additional-goods__parameter">50 Р.</p>
+              <h3 class="additional-good__title">Питьевая вода</h3>
+              <p class="additional-good__parameter">5 литров</p>
+              <p class="additional-good__parameter">50 Р.</p>
               <a class="additional-goods__button button" href="#">Заказать</a>
             </li>
             <li class="additional-goods__item">
-              <h3 class="additional-goods__title">Молоко</h3>
-              <p class="additional-goods__parameter">1 литр</p>
-              <p class="additional-goods__parameter">100 Р.</p>
+              <h3 class="additional-good__title">Молоко</h3>
+              <p class="additional-good__parameter">1 литр</p>
+              <p class="additional-good__parameter">100 Р.</p>
               <a class="additional-goods__button button" href="#">Заказать</a>
             </li>
             <li class="additional-goods__item">
-              <h3 class="additional-goods__title">Витамины</h3>
-              <p class="additional-goods__parameter">1 упаковка (30 г)</p>
-              <p class="additional-goods__parameter">300 Р.</p>
+              <h3 class="additional-good__title">Витамины</h3>
+              <p class="additional-good__parameter">1 упаковка (30 г)</p>
+              <p class="additional-good__parameter">300 Р.</p>
               <a class="additional-goods__button button" href="#">Заказать</a>
             </li>
           </ul>
