--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
-    <header class="page-header">
+    <header class="page-header container">
       <a class="page-header__logo">
         <img class="page-header__logo-image" src="https://via.placeholder.com/33.32x37.61" width="33.32" height="37.61" alt="Логотип (символ) Кэт энерджи">
         <img class="page-header__logo-text" src="https://via.placeholder.com/101x18" width="101" height="18" alt="Логотип (текст) Кэт энерджи">
@@ -33,7 +33,7 @@
       <div class="page-main__h1-wrapper">
         <h1 class="page-main__title">Функциональное <br>питание для котов</h1>
         <section class="promo">
-          <div class="promo__wrapper">
+          <div class="container">
             <h2 class="visually-hidden">Промо-блок Кэт Энерджи</h2>
             <p class="promo__slogan">Занялся собой? Займись котом!</p>
             <img class="promo__image" src="https://via.placeholder.com/280x270" width="280" height="270" alt="Фирменное начертание Кэт энерджи">
@@ -44,7 +44,7 @@
 
       <section class="goals">
         <h2 class="visually-hidden">Цели, которых можно достичь с Кэт Энерджи</h2>
-        <div class="goals__wrapper">
+        <div class="container">
           <ul class="goals__list">
             <li class="goals__item goals__item--slim">
               <h3 class="goals__title">Похудение</h3>
@@ -61,7 +61,7 @@
       </section>
 
       <section class="how-it-works">
-        <div class="how-it-works__wrapper">
+        <div class="container">
           <h2 class="how-it-works__title">Как это работает</h2>
           <ul class="how-it-works__list">
             <li class="how-it-works__item">Функциональное питание содержит только полезные питательные вещества.</li>
@@ -73,7 +73,7 @@
       </section>
 
       <section class="case">
-        <div class="case__wrapper">
+        <div class="case__wrapper container">
           <div class="case__text">
             <h2 class="case__title">Живой пример</h2>
             <p>Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
@@ -102,7 +102,7 @@
     </main>
 
     <footer class="page-footer">
-      <div class="page-footer__contacts contacts">
+      <div class="page-footer__contacts contacts container">
         <div class="contacts__wrapper">
           <p class="contacts__invitation">Приглашаем к сотрудничеству дилеров!</p>
           <div class="contacts__address-wrapper">
@@ -113,29 +113,31 @@
         <img class="contacts__map" src="https://via.placeholder.com/320x362" width="320" height="362" alt="Карта расположения Кэт Энерджи">
       </div>
       <div class="page-footer__wrapper">
-        <div class="page-footer__logo">
-        <a class="page-footer__logo-link" href="index.html">
-          <img src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип (текст) Кэт энерджи">
-        </a>
-        </div>
-        <div class="page-footer__social social">
-          <ul class="social__list">
-            <li class="social__item">
-              <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
-            </li>
-            <li class="social__item">
-              <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
-            </li>
-            <li class="social__item">
-              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
-            </li>
-          </ul>
-        </div>
-        <div class="page-footer__copyright copyright">
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-            <p>HTML Academy</p>
-            <img class="copyright__logo" src="https://via.placeholder.com/27x34" width="27" height="34" alt="Логотип HTML Academy">
+        <div class="container">
+          <div class="page-footer__logo">
+          <a class="page-footer__logo-link" href="index.html">
+            <img src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип (текст) Кэт энерджи">
           </a>
+          </div>
+          <div class="page-footer__social social">
+            <ul class="social__list">
+              <li class="social__item">
+                <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+              </li>
+            </ul>
+          </div>
+          <div class="page-footer__copyright copyright">
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+              <p>HTML Academy</p>
+              <img class="copyright__logo" src="https://via.placeholder.com/27x34" width="27" height="34" alt="Логотип HTML Academy">
+            </a>
+          </div>
         </div>
       </div>
     </footer>
