--- a/source/form.html
+++ b/source/form.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Кэт энерджи: Подбор программы</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
-    <header class="page-header">
+    <header class="page-header container">
       <a href="index.html" class="page-header__logo">
         <img class="page-header__logo-image" src="https://via.placeholder.com/33.32x37.61" width="33.32" height="37.61" alt="Логотип (символ) Кэт энерджи">
         <img class="page-header__logo-text" src="https://via.placeholder.com/101x18" width="101" height="18" alt="Логотип (текст) Кэт энерджи">
@@ -30,144 +31,156 @@
     </header>
 
     <main class="page-form">
-      <h1 class="page-form__title">Подбор программы</h1>
-      <section class="application">
-        <h2 class="visually-hidden">Форма заявки на подбор программы</h2>
-        <p class="application__intro">Заполните анкету, и мы подберем программу питания для вашего кота</p>
-        <form class="application__form" action="https://echo.htmlacademy.ru" method="post">
-          <fieldset class="application__fieldset">
-            <ul class="application__list">
-              <li class="application__item">
-                <label class="application__label application__label--required">
-                  Имя:*
-                  <input type="text" name="cat-name" placeholder="Барсик">
-                </label>
-              </li>
-              <li class="application__item">
-                <label class="application__label application__label--required">
-                  Вес (кг):*
-                  <input type="number" name="cat-weight" placeholder="7">
-                </label>
-              </li>
-              <li class="application__item">
-                <label class="application__label">
-                  Возраст (лет):
-                  <input type="number" name="cat-age" placeholder="7">
-                </label>
-              </li>
-            </ul>
-          </fieldset>
-          <fieldset class="application__fieldset radio">
-            <ul class="application__list">
-              <li class="application__item">
-                <label class="application__label radio__label">
-                  Похудение
-                  <input class="visually-hidden radio__input" type="radio" name="client-goal" value="slim" checked>
-                </label>
-              </li>
-              <li class="application__item">
-                <label class="application__label radio__label">
-                  Набор массы
-                  <input class="visually-hidden radio__input" type="radio" name="client-goal" value="weight-gain">
-                </label>
-              </li>
-              <li class="application__item">
-                <label class="application__label radio__label">
-                  Не знаю (Нужен ваш совет)
-                  <input class="visually-hidden radio__input" type="radio" name="client-goal" value="need-advice">
-                </label>
-              </li>
-            </ul>
-          </fieldset>
-          <fieldset class="application__fieldset">
-            <legend class="application__fieldset-title">Контактные данные (владельца кота)</legend>
-            <ul class="application__list">
-              <li class="application__item">
-                <label class="application__label application__label--required">
-                  E-mail:*
-                  <input type="email" name="client-email" placeholder="kuklachev@gmail.com">
-                </label>
-              </li>
-              <li class="application__item">
-                <label class="application__label application__label--required">
-                  Телефон:*
-                  <input type="tel" name="client-phone" placeholder="8 (960) 900-60-90">
-                </label>
-              </li>
-            </ul>
-          </fieldset>
-          <fieldset class="application__fieldset">
-            <legend class="application__fieldset-title">Комментарий</legend>
-            <textarea class="application__item" placeholder="Расскажите обо всех повАдках кота" name="client-comment"></textarea>
-          </fieldset>
-          <fieldset class="application__fieldset additions">
-            <legend class="application__fieldset-title">Дополнительно</legend>
-            <ul class="additions__list">
-              <li class="additions__item">
-                <label  class="application__label">
-                  Сахарозаменитель
-                  <input type="checkbox" name="sugar-substitute" checked>
-                </label>
-              </li>
-              <li class="additions__item">
-                <label  class="application__label">
-                  Питьевая вода
-                  <input type="checkbox" name="water">
-                </label>
-              </li>
-              <li class="additions__item">
-                <label  class="application__label">
-                  Молоко
-                  <input type="checkbox" name="milk">
-                </label>
-              </li>
-              <li class="additions__item">
-                <label  class="application__label">
-                  Витамины
-                  <input type="checkbox" name="vitamins">
-                </label>
-              </li>
-            </ul>
-          </fieldset>
-          <button class="application__button button" type="submit">
-            Отправить заявку
-          </button>
-          <p class="application__note">* — Обязательные поля</p>
-        </form>
-      </section>
+      <div class="container">
+        <h1 class="page-form__title">Подбор программы</h1>
+        <section class="application">
+          <h2 class="visually-hidden">Форма заявки на подбор программы</h2>
+          <p class="application__intro">Заполните анкету, и мы подберем<br> программу питания для вашего кота</p>
+          <form class="application__form" action="https://echo.htmlacademy.ru" method="post">
+            <div class="application__wrapper">
+              <fieldset class="application__fieldset">
+                <ul class="application__list">
+                  <li class="application__item">
+                    <label class="application__label application__label--required">
+                      Имя:*
+                      <input type="text" name="cat-name" placeholder="Барсик">
+                    </label>
+                  </li>
+                  <li class="application__item">
+                    <label class="application__label application__label--required">
+                      Вес (кг):*
+                      <input type="number" name="cat-weight" placeholder="7">
+                    </label>
+                  </li>
+                  <li class="application__item">
+                    <label class="application__label">
+                      Возраст (лет):
+                      <input type="number" name="cat-age" placeholder="7">
+                    </label>
+                  </li>
+                </ul>
+              </fieldset>
+              <fieldset class="application__fieldset radio">
+                <ul class="application__list">
+                  <li class="application__item">
+                    <label class="application__label radio__label">
+                      Похудение
+                      <input class="visually-hidden radio__input" type="radio" name="client-goal" value="slim" checked>
+                    </label>
+                  </li>
+                  <li class="application__item">
+                    <label class="application__label radio__label">
+                      Набор массы
+                      <input class="visually-hidden radio__input" type="radio" name="client-goal" value="weight-gain">
+                    </label>
+                  </li>
+                  <li class="application__item">
+                    <label class="application__label radio__label">
+                      Не знаю (Нужен ваш совет)
+                      <input class="visually-hidden radio__input" type="radio" name="client-goal" value="need-advice">
+                    </label>
+                  </li>
+                </ul>
+              </fieldset>
+            </div>
+            <fieldset class="application__fieldset">
+              <legend class="application__fieldset-title">Контактные данные (владельца кота)</legend>
+              <ul class="application__list application__list--two-columns">
+                <li class="application__item">
+                  <label class="application__label application__label--required">
+                    E-mail:*
+                    <input type="email" name="client-email" placeholder="kuklachev@gmail.com">
+                  </label>
+                </li>
+                <li class="application__item">
+                  <label class="application__label application__label--required">
+                    Телефон:*
+                    <input type="tel" name="client-phone" placeholder="8 (960) 900-60-90">
+                  </label>
+                </li>
+              </ul>
+            </fieldset>
+            <fieldset class="application__fieldset">
+              <legend class="application__fieldset-title">Комментарий</legend>
+              <textarea class="application__item application__item--textarea" placeholder="Расскажите обо всех повАдках кота" name="client-comment"></textarea>
+            </fieldset>
+            <fieldset class="application__fieldset additions">
+              <legend class="application__fieldset-title">Дополнительно</legend>
+              <ul class="additions__list">
+                <li class="additions__item">
+                  <label  class="application__label">
+                    Сахарозаменитель
+                    <input type="checkbox" name="sugar-substitute" checked>
+                  </label>
+                </li>
+                <li class="additions__item">
+                  <label  class="application__label">
+                    Питьевая вода
+                    <input type="checkbox" name="water">
+                  </label>
+                </li>
+                <li class="additions__item">
+                  <label  class="application__label">
+                    Молоко
+                    <input type="checkbox" name="milk">
+                  </label>
+                </li>
+                <li class="additions__item">
+                  <label  class="application__label">
+                    Витамины
+                    <input type="checkbox" name="vitamins">
+                  </label>
+                </li>
+              </ul>
+            </fieldset>
+            <div class="application__end-wrapper">
+              <button class="application__button button" type="submit">
+                Отправить заявку
+              </button>
+              <p class="application__note">* — Обязательные поля</p>
+            </div>
+          </form>
+        </section>
+      </div>
     </main>
 
     <footer class="page-footer">
-      <div class="page-footer__wrapper">
-        <div class="page-footer__contacts contacts">
+      <div class="page-footer__contacts contacts container">
+        <div class="contacts__wrapper">
           <p class="contacts__invitation">Приглашаем к сотрудничеству дилеров!</p>
-          <p class="contacts__address">ул. Большая Конюшенная, д. 19/8</p>
-          <p class="contacts__city">Санкт-Петербург</p>
-          <img class="contacts__map" src="https://via.placeholder.com/320x362" width="320" height="362" alt="Карта расположения Кэт Энерджи">
+          <div class="contacts__address-wrapper">
+            <p class="contacts__address">ул. Большая Конюшенная, д. 19/8</p>
+            <p class="contacts__city">Санкт-Петербург</p>
+          </div>
         </div>
-        <div class="page-footer__logo">
+        <img class="contacts__map" src="https://via.placeholder.com/320x362" width="320" height="362" alt="Карта расположения Кэт Энерджи">
+      </div>
+      <div class="page-footer__wrapper">
+        <div class="container">
+          <div class="page-footer__logo">
           <a class="page-footer__logo-link" href="index.html">
             <img src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип (текст) Кэт энерджи">
           </a>
-        </div>
-        <div class="page-footer__social social">
-          <ul class="social__list">
-            <li class="social__item">
-              <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
-            </li>
-            <li class="social__item">
-              <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
-            </li>
-            <li class="social__item">
-              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
-            </li>
-          </ul>
-        </div>
-        <div class="page-footer__copyright copyright">
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-            <p>HTML Academy</p>
-            <img class="copyright__logo" src="https://via.placeholder.com/27x34" width="27" height="34" alt="Логотип HTML Academy">
-          </a>
+          </div>
+          <div class="page-footer__social social">
+            <ul class="social__list">
+              <li class="social__item">
+                <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+              </li>
+            </ul>
+          </div>
+          <div class="page-footer__copyright copyright">
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+              <p>HTML Academy</p>
+              <img class="copyright__logo" src="https://via.placeholder.com/27x34" width="27" height="34" alt="Логотип HTML Academy">
+            </a>
+          </div>
         </div>
       </div>
     </footer>
