--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,19 +9,18 @@
   <body class="page__body">
     <header class="page-header container">
       <a class="page-header__logo">
-        <img class="page-header__logo-image" src="https://via.placeholder.com/33.32x37.61" width="33.32" height="37.61" alt="Логотип (символ) Кэт энерджи">
-        <img class="page-header__logo-text" src="https://via.placeholder.com/101x18" width="101" height="18" alt="Логотип (текст) Кэт энерджи">
+        <img class="page-header__logo-image" src="../img/logo-mobile.svg" width="190" height="38" alt="Логотип Кэт энерджи">
       </a>
-      <nav class="main-nav">
+      <nav class="main-nav main-nav--closed  main-nav--nojs">
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
         <ul class="main-nav__list">
-          <li class="main-nav__item main-nav__item--active">
-            <a>Главная</a>
-          </li>
           <li class="main-nav__item">
-            <a href="catalog.html">Каталог продукции</a>
+            <a href="index.html">Главная</a>
+          </li>
+          <li class="main-nav__item main-nav__item--active">
+            <a>Каталог продукции</a>
           </li>
           <li class="main-nav__item">
             <a href="form.html">Подбор программы</a>
@@ -259,5 +258,6 @@
         </div>
       </div>
     </footer>
+    <script src="../js/menu.js"></script>
   </body>
 </html>
