--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
-        <ul class="main-nav__list">
+        <ul class="main-nav__list main-nav__list--main-page">
           <li class="main-nav__item main-nav__item--active">
             <a>Главная</a>
           </li>
@@ -32,8 +32,8 @@
       <div class="page-main__h1-wrapper">
         <h1 class="page-main__title">Функциональное <br>питание для котов</h1>
         <section class="promo">
-          <div class="container">
-            <h2 class="visually-hidden">Промо-блок Кэт Энерджи</h2>
+          <h2 class="visually-hidden">Промо-блок Кэт Энерджи</h2>
+          <div class="container promo__wrapper">
             <p class="promo__slogan">Занялся собой? Займись котом!</p>
             <img class="promo__image" src="https://via.placeholder.com/280x270" width="280" height="270" alt="Фото упаковки Кэт энерджи">
             <a class="button promo__button" href="form.html">Подобрать программу</a>
