--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Каталог Кэт энерджи</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body class="page__body">
     <svg style="display: none">
@@ -362,6 +362,6 @@
         </div>
       </div>
     </footer>
-    <script src="../js/menu.js"></script>
+    <script src="../js/script.min.js"></script>
   </body>
 </html>
