Правки на странице формы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -51,11 +51,11 @@
         <div class="container">
           <ul class="basic-goods__list">
             <li class="basic-goods__item product-card">
-              <a href="#">
+              <a href="product-1.html">
                 <h3 class="product-card__title">Cat Energy&nbsp;<br class="product-card__off-tablet">PRO&nbsp;<br class="product-card__off-mobile">500 г</h3>
               </a>
               <p class="product-card__image-wrapper">
-                <a href="#">
+                <a href="product-1.html">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)" srcset="../img/catalog-1-desktop.webp 1x, ../img/catalog-1-desktop@2x.webp 2x">
                     <source type="image/webp" media="(min-width: 768px)" srcset="../img/catalog-1-tablet.webp 1x, ../img/catalog-1-tablet@2x.webp 2x">
@@ -80,14 +80,14 @@
                   <dd class="product-card__parameter-value">700 Р.</dd>
                 </div>
               </dl>
-              <a class="product-card__button button" href="#">Заказать</a>
+              <a class="product-card__button button" href="order.html">Заказать</a>
             </li>
             <li class="basic-goods__item product-card">
-              <a href="#">
+              <a href="product-2.html">
                 <h3 class="product-card__title">Cat Energy&nbsp;<br class="product-card__off-tablet">PRO&nbsp;<br class="product-card__off-mobile">1000 г</h3>
               </a>
               <p class="product-card__image-wrapper">
-                <a href="#">
+                <a href="product-2.html">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)" srcset="../img/catalog-2-desktop.webp 1x, ../img/catalog-2-desktop@2x.webp 2x">
                     <source type="image/webp" media="(min-width: 768px)" srcset="../img/catalog-2-tablet.webp 1x, ../img/catalog-2-tablet@2x.webp 2x">
@@ -112,14 +112,14 @@
                   <dd class="product-card__parameter-value">1000 Р.</dd>
                 </div>
               </dl>
-              <a class="product-card__button button" href="#">Заказать</a>
+              <a class="product-card__button button" href="order.html">Заказать</a>
             </li>
             <li class="basic-goods__item product-card">
-              <a href="#">
+              <a href="product-3.html">
                 <h3 class="product-card__title">Cat Energy&nbsp;<br class="product-card__off-tablet">PRO&nbsp;<br class="product-card__off-mobile">500 г</h3>
               </a>
               <p class="product-card__image-wrapper">
-                <a href="#">
+                <a href="product-3.html">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)" srcset="../img/catalog-3-desktop.webp 1x, ../img/catalog-3-desktop@2x.webp 2x">
                     <source type="image/webp" media="(min-width: 768px)" srcset="../img/catalog-3-tablet.webp 1x, ../img/catalog-3-tablet@2x.webp 2x">
@@ -144,14 +144,14 @@
                   <dd class="product-card__parameter-value">700 Р.</dd>
                 </div>
               </dl>
-              <a class="product-card__button button" href="#">Заказать</a>
+              <a class="product-card__button button" href="order.html">Заказать</a>
             </li>
             <li class="basic-goods__item product-card">
-              <a href="#">
+              <a href="product-4.html">
                 <h3 class="product-card__title">Cat Energy&nbsp;<br class="product-card__off-tablet">PRO&nbsp;<br class="product-card__off-mobile">1000 г</h3>
               </a>
               <p class="product-card__image-wrapper">
-                <a href="#">
+                <a href="product-4.html">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)" srcset="../img/catalog-4-desktop.webp 1x, ../img/catalog-4-desktop@2x.webp 2x">
                     <source type="image/webp" media="(min-width: 768px)" srcset="../img/catalog-4-tablet.webp 1x, ../img/catalog-4-tablet@2x.webp 2x">
@@ -176,14 +176,14 @@
                   <dd class="product-card__parameter-value">1000 Р.</dd>
                 </div>
               </dl>
-              <a class="product-card__button button" href="#">Заказать</a>
+              <a class="product-card__button button" href="order.html">Заказать</a>
             </li>
             <li class="basic-goods__item product-card">
-              <a href="#">
+              <a href="product-5.html">
                 <h3 class="product-card__title">Cat Energy&nbsp;<br class="product-card__off-tablet">Slim&nbsp;<br class="product-card__off-mobile">500 г</h3>
               </a>
               <p class="product-card__image-wrapper">
-                <a href="#">
+                <a href="product-5.html">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)" srcset="../img/catalog-5-desktop.webp 1x, ../img/catalog-5-desktop@2x.webp 2x">
                     <source type="image/webp" media="(min-width: 768px)" srcset="../img/catalog-5-tablet.webp 1x, ../img/catalog-5-tablet@2x.webp 2x">
@@ -208,14 +208,14 @@
                   <dd class="product-card__parameter-value">400 Р.</dd>
                 </div>
               </dl>
-              <a class="product-card__button button" href="#">Заказать</a>
+              <a class="product-card__button button" href="order.html">Заказать</a>
             </li>
             <li class="basic-goods__item product-card">
-              <a href="#">
+              <a href="product-6.html">
                 <h3 class="product-card__title">Cat Energy&nbsp;<br class="product-card__off-tablet">Slim&nbsp;<br class="product-card__off-mobile">1000 г</h3>
               </a>
               <p class="product-card__image-wrapper">
-                <a href="#">
+                <a href="product-6.html">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)" srcset="../img/catalog-6-desktop.webp 1x, ../img/catalog-6-desktop@2x.webp 2x">
                     <source type="image/webp" media="(min-width: 768px)" srcset="../img/catalog-6-tablet.webp 1x, ../img/catalog-6-tablet@2x.webp 2x">
@@ -240,14 +240,14 @@
                   <dd class="product-card__parameter-value">700 Р.</dd>
                 </div>
               </dl>
-              <a class="product-card__button button" href="#">Заказать</a>
+              <a class="product-card__button button" href="order.html">Заказать</a>
             </li>
             <li class="basic-goods__item product-card">
-              <a href="#">
+              <a href="product-7.html">
                 <h3 class="product-card__title">Cat Energy&nbsp;<br class="product-card__off-tablet">Slim&nbsp;<br class="product-card__off-mobile">500 г</h3>
               </a>
               <p class="product-card__image-wrapper">
-                <a href="#">
+                <a href="product-7.html">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)" srcset="../img/catalog-7-desktop.webp 1x, ../img/catalog-7-desktop@2x.webp 2x">
                     <source type="image/webp" media="(min-width: 768px)" srcset="../img/catalog-7-tablet.webp 1x, ../img/catalog-7-tablet@2x.webp 2x">
@@ -272,12 +272,12 @@
                   <dd class="product-card__parameter-value">500 Р.</dd>
                 </div>
               </dl>
-              <a class="product-card__button button" href="#">Заказать</a>
+              <a class="product-card__button button" href="order.html">Заказать</a>
             </li>
             <li class="basic-goods__item basic-goods__item--more-goods">
               <h3 class="basic-goods__more-goods-title">Показать еще&nbsp;<br>100500 товаров</h3>
               <p class="basic-goods__more-goods-text">На самом деле вкусов<br>&nbsp;гораздо больше!</p>
-              <a class="basic-goods__button button" href="#">Показать все</a>
+              <a class="basic-goods__button button" href="newgoods.html">Показать все</a>
             </li>
           </ul>
         </div>
@@ -294,7 +294,7 @@
                   <p class="additional-good__parameter">1 упаковка (100 г)</p>
                   <p class="additional-good__price">200 Р.</p>
                 </div>
-                <a class="additional-goods__button button" href="#">Заказать</a>
+                <a class="additional-goods__button button" href="order.html">Заказать</a>
               </li>
               <li class="additional-goods__item">
                 <h3 class="additional-good__title">Питьевая вода</h3>
@@ -302,7 +302,7 @@
                   <p class="additional-good__parameter">5 литров</p>
                   <p class="additional-good__price">50 Р.</p>
                 </div>
-                <a class="additional-goods__button button" href="#">Заказать</a>
+                <a class="additional-goods__button button" href="order.html">Заказать</a>
               </li>
               <li class="additional-goods__item">
                 <h3 class="additional-good__title">Молоко</h3>
@@ -310,7 +310,7 @@
                   <p class="additional-good__parameter">1 литр</p>
                   <p class="additional-good__price">100 Р.</p>
                 </div>
-                <a class="additional-goods__button button" href="#">Заказать</a>
+                <a class="additional-goods__button button" href="order.html">Заказать</a>
               </li>
               <li class="additional-goods__item">
                 <h3 class="additional-good__title">Витамины</h3>
@@ -318,7 +318,7 @@
                   <p class="additional-good__parameter">1 упаковка (30 г)</p>
                   <p class="additional-good__price">300 Р.</p>
                 </div>
-                <a class="additional-goods__button button" href="#">Заказать</a>
+                <a class="additional-goods__button button" href="order.html">Заказать</a>
               </li>
             </ul>
             <div class="additional-goods__bonus">
