--- a/source/form.html
+++ b/source/form.html
@@ -55,15 +55,15 @@
                 <ul class="application__list">
                   <li class="application__item">
                     <label class="application__label application__label--text application__label--required" for="application-cat-name">Имя:*</label>
-                    <input id="application-cat-name" type="text" name="cat-name" placeholder="Барсик" required>
+                    <input class="application__input" id="application-cat-name" type="text" name="cat-name" placeholder="Барсик" required>
                   </li>
                   <li class="application__item">
                     <label class="application__label application__label--text application__label--required" for="application-cat-weight">Вес (кг):*</label>
-                    <input id="application-cat-weight" type="number" name="cat-weight" placeholder="7" required>
+                    <input class="application__input" id="application-cat-weight" type="number" name="cat-weight" placeholder="7" required>
                   </li>
                   <li class="application__item">
                     <label class="application__label application__label--text" for="application-cat-age">Возраст (лет):</label>
-                    <input id="application-cat-age" type="number" name="cat-age" placeholder="7">
+                    <input class="application__input" id="application-cat-age" type="number" name="cat-age" placeholder="7">
                   </li>
                 </ul>
               </fieldset>
@@ -85,7 +85,7 @@
               </fieldset>
             </div>
             <fieldset class="application__fieldset">
-              <legend class="application__fieldset-title">Контактные данные<br> (владельца кота)</legend>
+              <legend class="application__fieldset-title">Контактные данные&nbsp;<br> (владельца кота)</legend>
               <ul class="application__list application__list--two-columns">
                 <li class="application__item">
                   <label class="application__label application__label--text application__label--required" for="application-client-email">E-mail:*</label>
